--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
             <p>Suscribete y dale like</p>        
             <p><img src="perro.jpg" width="100%"/></p>
     </div>
+    <div id="footer">
+		Hecho con amor en Platzi &lt;3
+	    </div>
         </div>
     </body>
 
